datadog: be able to display the apm metadata

--- a/examples/audit-trace.yaml
+++ b/examples/audit-trace.yaml
@@ -93,6 +93,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: audit-trace
+        imagePullPolicy: Never
         image: quay.io/julienbalestra/audit-trace:master
         command:
         - /usr/local/bin/audit-trace
