--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,11 +80,7 @@ jobs:
           command: make audit-trace-docker
       - run:
           name: pupernetes
-           # TODO use the audit log release when available
-          command: docker run -it --rm --net=host -v /home/circleci/.go_workspace/:/go golang:1.10 go get github.com/DataDog/pupernetes/cmd
-      - run:
-          name: mv
-          command: sudo mv -v /home/circleci/.go_workspace/bin/cmd /usr/local/bin/pupernetes
+          command: sudo curl -Lf https://github.com/DataDog/pupernetes/releases/download/v0.7.0/pupernetes -o /usr/local/bin/pupernetes && sudo chmod +x /usr/local/bin/pupernetes
       - run:
           name: apt
           command: sudo apt-get update -qq && sudo apt-get install -yqq systemd
